# lm8

./: .gitignore  .gitmodules  LICENSE  README.md  assemble.sh  assembler.py  fetch_songs.sh  image_convert.py  index.html  index.js  index.wasm  microcode.py  song_converter.py
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  ASSEMBLER.md  ATTRIBUTIONS.md  BOOTLOADER.md  COMPILER.md  EMULATOR.md  FPGA.md  HARDWARE.md  LIBRARIES.md  PLUGIN.md  PROGRAMMING.md  README.md  SIMULATION.md
emulator/: CMakeLists.txt  Disassembler.cpp  Disassembler.h  Emulator.cpp  Emulator.h  ImGuiFileDialog.cpp  ImGuiFileDialog.h  README.md  StringFormat.h  imgui_toggle_button.h  main.cpp
emulator/Emscripten/: Makefile  shell_minimal.html
emulator/Windows/SDL2/x86_64-w64-mingw32/lib/cmake/SDL2/: sdl2-config.cmake
emulator/cmake/: FindSDL2.cmake
fpga/: .gitignore  adc_driver.vhd  alu.vhd  computer.vhd  cpu.vhd  cpu_test.vhd  debug.stp  fpga.htm  fpga.qpf  fpga.qsf  fpga.sdc  fpga.sld  fpga_assignment_defaults.qdf  gpu.vhd  lm8.vhd  memory.vhd  microcode.vhd  peripherals.vhd  peripherals_test.vhd  power_on_reset.vhd  pwm_driver.vhd  random.vhd  seg7.vhd  timer.vhd  timer_test.vhd  uart_controller.vhd  vga_driver.vhd
jetbrains-assembly-plugin/: README.md  build.gradle  settings.gradle
jetbrains-assembly-plugin/src/main/java/com/thelogicmaster/custom_assembly_plugin/: Assembly.bnf  Assembly.flex  AssemblyAnnotator.java  AssemblyBlock.java  AssemblyColorSettingsPage.java  AssemblyCommenter.java  (+25 more)
jetbrains-assembly-plugin/src/main/resources/fileTemplates/: Assembly Program.asm.ft
programs/: All Instructions.asm  Blink.asm  Bootloader.asm  Disassembler Test.asm  Emulator Bootloader.asm  Hello From C.c  Hello World 2.asm  Hello World.asm  IO Panel.asm  IO Test.asm  Instruction Test.asm  Keypad.asm  LCD Hello.asm  LED Dimmer.asm  Music.asm  OLED Display Demo.asm  RC Car.asm  Rotary Encoder.asm  Serial Parot in C.c  Serial Parot.asm  Servo Wave.asm  Servo.asm  Simulator Test.asm  Snake in C.c  Snake.asm  Telnet Display.asm  Ultrasonic.asm
programs/libraries/: Graphics.asm  I2C.asm  LCD.asm  Math.asm  Modem.asm  Nunchuk.asm  PCA9685.asm  SD.asm  SPI.asm  SSD1306.asm  Serial.asm  Utilities.asm
simulation/: .gitignore  DE10-LITE.xml  adc.qsys  adc_controller.vhd  compile.sh  compile_and_flash.sh  debug.sh  debug.stp  env.sh  flash.sh  incremental_flash.sh  lm8.dig  patch_microcode.sh  patch_rom.sh  persistent_flash.sh  rom.vhd  rom_to_mif.py  rom_to_vhdl.py  simulation.circ  synthesize.sh  synthesize_and_flash.sh  timer.dig  uart.qsys  uart_controller.vhd
simulation/ip/adc/: adc.bsf  adc.cmp  adc.html  adc.xml  adc_bb.v  adc_generation.rpt  adc_inst.v  adc_inst.vhd
simulation/ip/adc/synthesis/: adc.debuginfo  adc.qip  adc.vhd
simulation/ip/adc/synthesis/submodules/: adc_adc_mega_0.v  fiftyfivenm_adcblock_top_wrapper.v
vbcc/machines/lm8/: machine.c  machine.h
(+10 files in other folders)
